added welcome to restaurant

--- a/css/style.css
+++ b/css/style.css
@@ -67,5 +67,10 @@ body{
 .carousel-item {
     height: 700px;
 }
-
+#restaurant-video{
+    clear:both;
+}
+#restaurant-img{
+    max-height:690px;
+}
 }
