--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,19 @@
     height: 100px;
     
 }
+.chef-img{
+    width: 400px;
+    height: 500px;
+    overflow: hidden;
+    margin: 10px;
+    ;
+   
+}
+#main-footer{
+    background: #000;
+    color:#fff;
+}
+
 
 @media only screen and (min-width:768px){
 body{
